--- a/Site-Teste-main/Página Teste.html
+++ b/Site-Teste-main/Página Teste.html
@@ -22,6 +22,8 @@
     <div class="caixa amarela">Teste2</div>
     <div class="caixa azul">Teste3</div>
 
+    <script src="script.js"></script>
+
 
 </body>
 
