site teste com js

--- a/Site-Teste-main/Página Teste.html
+++ b/Site-Teste-main/Página Teste.html
@@ -15,16 +15,17 @@
     <div class="caixa verde">Oi</div>
 
     <div class="caixa vermelha">
-        Teste
-        <img src="thumb_logo-cigam.png" alt="" width="50" height="60">
+        Teste1
+        <img src="thumb_logo-cigam.png" alt="Logo cigam" title="Logo da empresa" width="50" height="60">
     </div>
 
-    <div class="caixa amarela">Teste2</div>
-    <div class="caixa azul">Teste3</div>
+    <div class="caixa amarela">Teste3</div>
+    <div class="caixa azul">Teste2</div>
 
-    <script src="script.js"></script>
+    <div id="Oi"></div>
 
 
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
